@@ -4431,6 +4431,7 @@ void Client::Handle_OP_GuildInviteAccept(const EQApplicationPacket *app)
 			}
 			if(zone->GetZoneID() == RuleI(World, GuildBankZoneID) && GuildBanks)
 				GuildBanks->SendGuildBank(this);
+			SendGuildRanks();
 
 		}
 	}
@@ -8128,7 +8129,10 @@ void Client::Handle_OP_ClientError(const EQApplicationPacket *app)
 void Client::Handle_OP_ReloadUI(const EQApplicationPacket *app)
 {
 	if(IsInAGuild())
+	{
+		SendGuildRanks();
 		SendGuildMembers();
+	}
 	return;
 }
 
@@ -9603,6 +9607,7 @@ void Client::CompleteConnect()
 
 	if(IsInAGuild())
 	{
+		SendGuildRanks();
 		guild_mgr.SendGuildMemberUpdateToWorld(GetName(), GuildID(), zone->GetZoneID(), time(nullptr));
 		guild_mgr.RequestOnlineGuildMembers(this->CharacterID(), this->GuildID());
 	}
@@ -12528,6 +12533,7 @@ void Client::Handle_OP_GuildCreate(const EQApplicationPacket *app)
 
 			if(zone->GetZoneID() == RuleI(World, GuildBankZoneID) && GuildBanks)
 				GuildBanks->SendGuildBank(this);
+			SendGuildRanks();
 		}
 	}
 }
