@@ -115,6 +115,42 @@ void Client::SendGuildChannel()
 	}
 }
 
+void Client::SendGuildRanks()
+{
+	if(GetClientVersion() < EQClientRoF)
+		return;
+
+	int permissions = 30 + 1; //Static number of permissions in all EQ clients as of May 2014
+	int ranks = 8 + 1; // Static number of RoF+ ranks as of May 2014
+	int j = 1;
+	int i = 1;
+	if(IsInAGuild())
+	{
+		while(j < ranks)
+		{
+			while(i < permissions)
+			{
+				EQApplicationPacket *outapp = new EQApplicationPacket(OP_GuildUpdateURLAndChannel, sizeof(GuildUpdateRanks_Struct));
+				GuildUpdateRanks_Struct *guuacs = (GuildUpdateRanks_Struct*) outapp->pBuffer;
+				//guuacs->Unknown0008 = this->GuildID();
+				strncpy(guuacs->Unknown0012, this->GetCleanName(), 64);
+				guuacs->Action = 5;
+				guuacs->RankID = j;
+				guuacs->GuildID = this->GuildID();
+				guuacs->PermissionID = i;
+				guuacs->PermissionVal = 1;
+				guuacs->Unknown0089[0] = 0x2c;
+				guuacs->Unknown0089[1] = 0x01;
+				guuacs->Unknown0089[2] = 0x00;
+				FastQueuePacket(&outapp);
+				i++;
+			}
+			j++;
+			i = 1;
+		}
+	}
+}
+
 void Client::SendGuildSpawnAppearance() {
 	if (!IsInAGuild()) {
 		// clear guildtag
